# mlops-labs

./: .gitignore  et --hard 534871b
titanic-mlops-pipeline/: LICENSE  Makefile  README.md  app.py  config.py  config.yaml  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py
titanic-mlops-pipeline/.dvc/: config
titanic-mlops-pipeline/docs/: Makefile  conf.py  index.rst  make.bat
titanic-mlops-pipeline/models/: .gitignore  preprocessor.joblib  preprocessors.pkl  saved_model.pkl
titanic-mlops-pipeline/outputs/2026-04-23/20-20-53/.hydra/: hydra.yaml
titanic-mlops-pipeline/outputs/2026-04-23/20-26-30/.hydra/: hydra.yaml
titanic-mlops-pipeline/outputs/2026-04-23/20-26-38/.hydra/: hydra.yaml  overrides.yaml
titanic-mlops-pipeline/outputs/2026-04-23/20-35-36/.hydra/: hydra.yaml
titanic-mlops-pipeline/outputs/2026-04-23/20-35-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
titanic-mlops-pipeline/outputs/2026-04-23/20-35-49/.hydra/: config.yaml  hydra.yaml
titanic-mlops-pipeline/outputs/2026-04-23/21-29-20/.hydra/: hydra.yaml
titanic-mlops-pipeline/outputs/2026-04-23/21-31-59/.hydra/: hydra.yaml
titanic-mlops-pipeline/reports/: metrics.txt
titanic-mlops-pipeline/src/data/: __init__.py  make_dataset.py
titanic-mlops-pipeline/src/features/: __init__.py  build_features.py
titanic-mlops-pipeline/src/models/: __init__.py  eval.py  predict_model.py  train_model.py
titanic-mlops-pipeline/src/stages/: data_load.py  data_preprocess.py  evaluate.py  train.py
titanic-mlops-pipeline/src/titanic_mlops_pipeline/: __init__.py
(+65 files in other folders)
