[project]
name = "titanic-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdelaziz", email = "ahmed2025.mohamed2000@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
